--- a/src/Components/ContectForm.css
+++ b/src/Components/ContectForm.css
@@ -1,6 +1,20 @@
-.form-back {
-  background-color: rgb(45, 41, 41);
-  padding: 50px 50px;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  border-radius: 10px;
+h1 {
+  color: #2c3e50;
+}
+
+h4 {
+  color: #34495e;
+}
+
+.form-control {
+  border-radius: 5px;
+}
+
+.btn-primary {
+  background-color: #2c3e50;
+  border: none;
+}
+
+.btn-primary:hover {
+  background-color: #34495e;
 }
