--- a/src/Components/Admission.css
+++ b/src/Components/Admission.css
@@ -24,185 +24,7 @@
   list-style-type: none;
   margin: 0;
   padding: 0;
-}
-
-.sign-up {
-  background: #fff url("../assets/signup-background.jpg") no-repeat scroll
-    center center;
-  background-size: cover;
-  -moz-background-size: cover;
-  -webkit-background-size: cover;
-  -o-background-size: cover;
-  -ms-background-size: cover;
-  background-attachment: fixed;
-  position: relative;
-}
-.sign-up:after {
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  content: "";
-  background-color: rgba(0, 0, 0, 0.8);
-  z-index: 9;
-}
-
-.sign-up-content {
-  position: relative;
-  z-index: 99;
-}
-.sign-up-content .register-now {
-  color: #ccc;
-  margin-top: 40px;
-}
-.sign-up-content .register-now .get-more {
-  font-size: 18px;
-  color: #fff;
-}
-.sign-up-content .register-now .register-title {
-  font-size: 60px;
-  color: #ffa037;
-  text-transform: uppercase;
-  padding-bottom: 11px;
-}
-.sign-up-content .register-now .statistics-block {
-  margin-top: 40px;
-}
-.sign-up-content .sign-up-form {
-  margin-left: 170px;
-}
-.sign-up-content .sign-up-form .form-heading {
-  background: #ffa037;
-  padding: 30px 40px;
-  color: #fff;
-  text-align: center;
-}
-.sign-up-content .sign-up-form .form-heading h3 {
-  font-size: 35px;
-  margin-bottom: 11px;
-  color: #fff;
-}
-.sign-up-content .sign-up-form .form-heading p {
-  padding: 0 40px;
-}
-.sign-up-content .sign-up-form form {
-  width: 100%;
-  background: #fff;
-  padding: 50px 30px 45px 30px;
-}
-.sign-up-content .sign-up-form form input {
-  width: 100%;
-  border: 1px solid #e5e5e5;
-  padding: 12px 20px;
-}
-.sign-up-content .sign-up-form form input::-webkit-input-placeholder {
-  color: #666;
-  font-size: 14px;
-}
-.sign-up-content .sign-up-form form input::-moz-placeholder {
-  color: #666;
-  font-size: 14px;
-}
-.sign-up-content .sign-up-form form input:-ms-input-placeholder {
-  color: #666;
-  font-size: 14px;
-}
-.sign-up-content .sign-up-form form input:-moz-placeholder {
-  color: #666;
-  font-size: 14px;
-}
-.sign-up-content .sign-up-form form .form-group {
-  position: relative;
-}
-.sign-up-content .sign-up-form form .form-group i {
-  position: absolute;
-  top: 50%;
-  right: 20px;
-  transform: translateY(-50%);
-  -moz-transform: translateY(-50%);
-  -webkit-transform: translateY(-50%);
-  -o-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  font-size: 14px;
-  color: #999;
-}
-.sign-up-content .sign-up-form form .form-group:hover i {
-  color: #ffa037;
-}
-.sign-up-content .sign-up-form form .submit {
-  margin-top: 10px;
-  background: #ffa037;
-  color: #fff;
-  font-size: 18px;
-  font-weight: bold;
-  padding: 8px 20px;
-  border: none;
-  border: 2px solid transparent;
-  cursor: pointer;
-}
-.sign-up-content .sign-up-form form .submit:hover {
-  background-color: #ff8804;
-}
-
-.statistics-block ul {
-  overflow: hidden;
-}
-.statistics-block ul li {
-  float: left;
-  padding-right: 30px;
-  width: 33.33%;
-}
-.statistics-block ul li .info span {
-  display: block;
-}
-.statistics-block ul li .info span:first-child {
-  font-size: 45px;
-  font-family: "Roboto Slab";
-  font-weight: bold;
-  color: #fff;
-  margin-top: -5px;
-  margin-bottom: -3px;
-}
-.statistics-block ul li .info span:nth-child(2) {
-  font-size: 16px;
-}
-.statistics-block ul li:last-child {
-  padding-right: 0px;
-}
-
-.fas {
-  padding-right: 6px;
 } */
-
-/* General Styles */
-list-type-ulli,
-.socials ul,
-.pagination ul,
-.footer-top-content .footer-link-menu ul,
-.footer-top-content .footer-contact ul,
-.menu ul,
-.widget_product_categories ul,
-.widget_categories ul,
-.widget_tags ul,
-.widget_lastest_entries ul,
-.our-story-content ul,
-.contact-info-two-content ul,
-.filter-events,
-.statistics-block ul,
-.filter-featured-course,
-.fqa-content ul,
-.filter-gallery,
-.membership-content .item .info ul,
-.single-course-content .single-course-info .course-teacher-cat .teacher-cat ul,
-.single-course-tab ul,
-.single-events-content .events-info ul,
-.single-events-content .event-detail .event-content ul,
-.event-signup .info ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
 
 .sign-up {
   background: #fff url("../assets/signup-background.jpg") no-repeat center
@@ -251,7 +73,7 @@ list-type-ulli,
 
 .sign-up-content .sign-up-form {
   margin-left: 170px;
-  max-width: 600px; /* Set max width for form */
+  max-width: 600px;
   width: 100%;
 }
 
@@ -325,13 +147,13 @@ list-type-ulli,
 /* Statistics Block */
 .statistics-block ul {
   display: flex;
-  flex-wrap: wrap; /* Allow items to wrap */
+  flex-wrap: wrap;
 }
 
 .statistics-block ul li {
-  flex: 1 1 30%; /* Flex basis for responsive layout */
+  flex: 1 1 30%;
   padding-right: 30px;
-  margin-bottom: 20px; /* Space between rows */
+  margin-bottom: 20px;
 }
 
 .statistics-block ul li .info span {
@@ -355,7 +177,6 @@ list-type-ulli,
   padding-right: 0px;
 }
 
-/* Font Awesome */
 .fas {
   padding-right: 6px;
 }
@@ -363,50 +184,50 @@ list-type-ulli,
 /* Responsive Styles */
 @media (max-width: 1200px) {
   .sign-up-content .sign-up-form {
-    margin-left: 20px; /* Adjust margin for medium screens */
+    margin-left: 20px;
   }
 
   .sign-up-content .register-now .register-title {
-    font-size: 40px; /* Adjust title font size */
+    font-size: 40px;
   }
 }
 
 @media (max-width: 768px) {
   .sign-up-content .sign-up-form {
-    margin-left: 0; /* Remove margin for small screens */
-    padding: 20px; /* Add padding for smaller screens */
+    margin-left: 0;
+    padding: 20px;
   }
 
   .sign-up-content .register-now .register-title {
-    font-size: 30px; /* Further adjust title font size */
+    font-size: 30px;
   }
 
   .statistics-block ul {
-    flex-direction: column; /* Stack items vertically */
+    flex-direction: column;
   }
 
   .statistics-block ul li {
-    flex: 1 1 100%; /* Full width for list items */
-    padding-right: 0; /* Remove padding */
-    margin-bottom: 10px; /* Space between stacked items */
+    flex: 1 1 100%;
+    padding-right: 0;
+    margin-bottom: 10px;
   }
 }
 
 @media (max-width: 480px) {
   .sign-up-content .register-now .get-more {
-    font-size: 16px; /* Adjust button font size */
+    font-size: 16px;
   }
 
   .sign-up-content .sign-up-form .form-heading h3 {
-    font-size: 28px; /* Adjust form heading font size */
+    font-size: 28px;
   }
 
   .sign-up-content .sign-up-form form input {
-    padding: 10px; /* Adjust padding for input fields */
+    padding: 10px;
   }
 
   .sign-up-content .sign-up-form form .submit {
-    font-size: 16px; /* Adjust button font size */
+    font-size: 16px;
   }
 }
 
